--- a/experiences.html
+++ b/experiences.html
@@ -8,8 +8,18 @@
   <script src="https://cdn.tailwindcss.com?plugins=aspect-ratio"></script>
 
   <style>
+    /* hide horizontal scrollbar for the card rows */
     .scrollbar-hide::-webkit-scrollbar{display:none}
     .scrollbar-hide{-ms-overflow-style:none;scrollbar-width:none}
+
+    /* ---------- Mobile‑friendly close button ---------- */
+    @media (max-width:640px){
+      /* 48 × 48 px tap target per WCAG */
+      #closeBtn{width:3rem;height:3rem;font-size:2.5rem}
+    }
+    /* invisible hit‑box so even desktop users get a larger area */
+    #closeBtn{position:relative}
+    #closeBtn::after{content:"";position:absolute;inset:-0.75rem}
   </style>
 </head>
 
@@ -47,163 +57,155 @@
 
       <!-- EOTW -->
       <div class="relative w-48 flex-shrink-0 group cursor-pointer" data-src="assets/eotw.mp4">
-        <img src="assets/eotw.jpg" alt="End of the World"
-             class="w-full aspect-square object-cover rounded-xl" loading="lazy">
-        <video src="assets/eotw.mp4" muted loop playsinline
-               class="absolute inset-0 w-full h-full object-cover rounded-xl opacity-0 group-hover:opacity-100 transition-opacity duration-300"></video>
+        <img src="assets/eotw.jpg" alt="End of the World" class="w-full aspect-square object-cover rounded-xl" loading="lazy">
+        <video src="assets/eotw.mp4" muted loop playsinline class="absolute inset-0 w-full h-full object-cover rounded-xl opacity-0 group-hover:opacity-100 transition-opacity duration-300"></video>
       </div>
 
       <!-- URGC -->
       <div class="relative w-48 flex-shrink-0 group cursor-pointer" data-src="assets/Urgc.mp4">
-        <img src="assets/urgc.jpg" alt="Underground Rebel Gameshow"
-             class="w-full aspect-square object-cover rounded-xl" loading="lazy">
-        <video src="assets/Urgc.mp4" muted loop playsinline
-               class="absolute inset-0 w-full h-full object-cover rounded-xl opacity-0 group-hover:opacity-100 transition-opacity duration-300"></video>
+        <img src="assets/urgc.jpg" alt="Underground Rebel Gameshow" class="w-full aspect-square object-cover rounded-xl" loading="lazy">
+        <video src="assets/Urgc.mp4" muted loop playsinline class="absolute inset-0 w-full h-full object-cover rounded-xl opacity-0 group-hover:opacity-100 transition-opacity duration-300"></video>
       </div>
 
       <!-- TTM -->
       <div class="relative w-48 flex-shrink-0 group cursor-pointer" data-src="assets/Ttm.mp4">
-        <img src="assets/ttm.jpg" alt="Twisted Time Machine"
-             class="w-full aspect-square object-cover rounded-xl" loading="lazy">
-        <video src="assets/Ttm.mp4" muted loop playsinline
-               class="absolute inset-0 w-full h-full object-cover rounded-xl opacity-0 group-hover:opacity-100 transition-opacity duration-300"></video>
+        <img src="assets/ttm.jpg" alt="Twisted Time Machine" class="w-full aspect-square object-cover rounded-xl" loading="lazy">
+        <video src="assets/Ttm.mp4" muted loop playsinline class="absolute inset-0 w-full h-full object-cover rounded-xl opacity-0 group-hover:opacity-100 transition-opacity duration-300"></video>
       </div>
 
       <!-- RB -->
       <div class="relative w-48 flex-shrink-0 group cursor-pointer" data-src="assets/rb.mp4">
-        <img src="assets/rb.jpg" alt="Rebel Bingo"
-             class="w-full aspect-square object-cover rounded-xl" loading="lazy">
-        <video src="assets/rb.mp4" muted loop playsinline
-               class="absolute inset-0 w-full h-full object-cover rounded-xl opacity-0 group-hover:opacity-100 transition-opacity duration-300"></video>
+        <img src="assets/rb.jpg" alt="Rebel Bingo" class="w-full aspect-square object-cover rounded-xl" loading="lazy">
+        <video src="assets/rb.mp4" muted loop playsinline class="absolute inset-0 w-full h-full object-cover rounded-xl opacity-0 group-hover:opacity-100 transition-opacity duration-300"></video>
       </div>
 
- <!-- Cat Face -->
+      <!-- Cat Face -->
       <div class="relative w-48 flex-shrink-0 group cursor-pointer" data-src="assets/CatFace.mp4">
-        <img src="assets/catface.png" alt="Rebel Bingo"
-             class="w-full aspect-square object-cover rounded-xl" loading="lazy">
-        <video src="assets/CatFace.mp4" muted loop playsinline
-               class="absolute inset-0 w-full h-full object-cover rounded-xl opacity-0 group-hover:opacity-100 transition-opacity duration-300"></video>
+        <img src="assets/catface.png" alt="Cat Face" class="w-full aspect-square object-cover rounded-xl" loading="lazy">
+        <video src="assets/CatFace.mp4" muted loop playsinline class="absolute inset-0 w-full h-full object-cover rounded-xl opacity-0 group-hover:opacity-100 transition-opacity duration-300"></video>
       </div>
 
- <!-- Lycra -->
-      <div class="relative w-48 flex-shrink-0 group cursor-pointer" data-src="assets/rb.mp4">
-        <img src="assets/lycra.png" alt="Lycra 80s Party"
-             class="w-full aspect-square object-cover rounded-xl" loading="lazy">
-        <video src="assets/Lycra.mp4" muted loop playsinline
-               class="absolute inset-0 w-full h-full object-cover rounded-xl opacity-0 group-hover:opacity-100 transition-opacity duration-300"></video>
-      </div>
-
-
-    </div> 
-
- </section>
-
-  <!-- ───── ROW : Coming Soon (duplicate) ───── -->
-  <section class="space-y-3 px-6 py-8">
-    <h3 class="text-lg md:text-xl font-bold px-1">Coming Soon</h3>
-
-    <div class="flex gap-4 overflow-x-auto scrollbar-hide pb-4">
-
-            <!-- SNOOZEFEST -->
-      <div class="relative w-48 flex-shrink-0 group cursor-pointer" data-src="assets/SNZF.mp4">
-        <img src="assets/SNOOZEFESTSQ.png" alt="Snoozefest Pajama Party"
-             class="w-full aspect-square object-cover rounded-xl" loading="lazy">
-        <video src="assets/SNZF.mp4" muted loop playsinline
-               class="absolute inset-0 w-full h-full object-cover rounded-xl opacity-0 group-hover:opacity-100 transition-opacity duration-300"></video>
-      </div>
-
-<!-- HOEDOWN -->
-      <div class="relative w-48 flex-shrink-0 group cursor-pointer" data-src="assets/Urgc.mp4">
-        <img src="assets/hoedown.png" alt="Placeholder 2"
-             class="w-full aspect-square object-cover rounded-xl" loading="lazy">
-        <video src="assets/hoedown.mp4" muted loop playsinline
-               class="absolute inset-0 w-full h-full object-cover rounded-xl opacity-0 group-hover:opacity-100 transition-opacity duration-300"></video>
-      </div>
-    </div> 
-
- </section>
-
-  <!-- ───── ROW : Corporate) ───── -->
-
-  <section class="space-y-3 px-6 py-8">
-    <h3 class="text-lg md:text-xl font-bold px-1">Corporate Events & Keynotes</h3>
-
-    <div class="flex gap-4 overflow-x-auto scrollbar-hide pb-4">
-
-<!-- KILLER KEYNOTE -->
-      <div class="relative w-48 flex-shrink-0 group cursor-pointer" data-src="assets/URGC.mp4">
-        <img src="assets/keynote.png" alt="Placeholder 2"
-             class="w-full aspect-square object-cover rounded-xl" loading="lazy">
-        <video src="assets/keynote.mp4" muted loop playsinline
-               class="absolute inset-0 w-full h-full object-cover rounded-xl opacity-0 group-hover:opacity-100 transition-opacity duration-300"></video>
-      </div>
-
-<!-- PERFECT PANEL -->
-      <div class="relative w-48 flex-shrink-0 group cursor-pointer" data-src="assets/URGC.mp4">
-        <img src="assets/PANELS.png" alt="Placeholder 2"
-             class="w-full aspect-square object-cover rounded-xl" loading="lazy">
-        <video src="assets/keynote.mp4" muted loop playsinline
-               class="absolute inset-0 w-full h-full object-cover rounded-xl opacity-0 group-hover:opacity-100 transition-opacity duration-300"></video>
+      <!-- Lycra -->
+      <div class="relative w-48 flex-shrink-0 group cursor-pointer" data-src="assets/Lycra.mp4">
+        <img src="assets/lycra.png" alt="Lycra 80s Party" class="w-full aspect-square object-cover rounded-xl" loading="lazy">
+        <video src="assets/Lycra.mp4" muted loop playsinline class="absolute inset-0 w-full h-full object-cover rounded-xl opacity-0 group-hover:opacity-100 transition-opacity duration-300"></video>
       </div>
 
     </div>
   </section>
 
+  <!-- ───── ROW : Coming Soon ───── -->
+  <section class="space-y-3 px-6 py-8">
+    <h3 class="text-lg md:text-xl font-bold px-1">Coming Soon</h3>
+
+    <div class="flex gap-4 overflow-x-auto scrollbar-hide pb-4">
+      <!-- SNOOZEFEST -->
+      <div class="relative w-48 flex-shrink-0 group cursor-pointer" data-src="assets/SNZF.mp4">
+        <img src="assets/SNOOZEFESTSQ.png" alt="Snoozefest Pajama Party" class="w-full aspect-square object-cover rounded-xl" loading="lazy">
+        <video src="assets/SNZF.mp4" muted loop playsinline class="absolute inset-0 w-full h-full object-cover rounded-xl opacity-0 group-hover:opacity-100 transition-opacity duration-300"></video>
+      </div>
+
+      <!-- HOEDOWN -->
+      <div class="relative w-48 flex-shrink-0 group cursor-pointer" data-src="assets/hoedown.mp4">
+        <img src="assets/hoedown.png" alt="Hoedown Showdown" class="w-full aspect-square object-cover rounded-xl" loading="lazy">
+        <video src="assets/hoedown.mp4" muted loop playsinline class="absolute inset-0 w-full h-full object-cover rounded-xl opacity-0 group-hover:opacity-100 transition-opacity duration-300"></video>
+      </div>
+    </div>
+  </section>
+
+  <!-- ───── ROW : Corporate ───── -->
+  <section class="space-y-3 px-6 py-8">
+    <h3 class="text-lg md:text-xl font-bold px-1">Corporate Events & Keynotes</h3>
+
+    <div class="flex gap-4 overflow-x-auto scrollbar-hide pb-4">
+      <!-- KILLER KEYNOTE -->
+      <div class="relative w-48 flex-shrink-0 group cursor-pointer" data-src="assets/keynote.mp4">
+        <img src="assets/keynote.png" alt="Killer Keynote" class="w-full aspect-square object-cover rounded-xl" loading="lazy">
+        <video src="assets/keynote.mp4" muted loop playsinline class="absolute inset-0 w-full h-full object-cover rounded-xl opacity-0 group-hover:opacity-100 transition-opacity duration-300"></video>
+      </div>
+
+      <!-- PERFECT PANEL -->
+      <div class="relative w-48 flex-shrink-0 group cursor-pointer" data-src="assets/keynote.mp4">
+        <img src="assets/PANELS.png" alt="Perfect Panel" class="w-full aspect-square object-cover rounded-xl" loading="lazy">
+        <video src="assets/keynote.mp4" muted loop playsinline class="absolute inset-0 w-full h-full object-cover rounded-xl opacity-0 group-hover:opacity-100 transition-opacity duration-300"></video>
+      </div>
+    </div>
+  </section>
+
   <!-- ───── OVERLAY PLAYER ───── -->
-  <div id="overlay"
-       class="fixed inset-0 bg-black/90 flex items-center justify-center z-50 hidden">
+  <div id="overlay" class="fixed inset-0 bg-black/90 flex items-center justify-center z-50 hidden">
     <video id="overlayVid" class="max-h-[90vh] max-w-[90vw]" controls></video>
-    <button id="closeBtn"
-            class="absolute top-4 right-4 text-white text-4xl font-bold leading-none">&times;</button>
+    <button id="closeBtn" class="absolute top-4 right-4 text-white text-4xl font-bold leading-none">&times;</button>
   </div>
 
   <!-- ───── JS ───── -->
   <script>
-  document.addEventListener('DOMContentLoaded', () => {
-    /* Overlay logic */
+  document.addEventListener('DOMContentLoaded',()=>{
+    /* ---------- Overlay logic ---------- */
     const overlay    = document.getElementById('overlay');
     const overlayVid = document.getElementById('overlayVid');
     const closeBtn   = document.getElementById('closeBtn');
 
-    closeBtn.addEventListener('click', () => {
+    closeBtn.addEventListener('click',()=>{
       overlayVid.pause();
       overlayVid.removeAttribute('src');
-  overlayVid.load();
-overlay.classList.add('hidden');
+      overlayVid.load();
+      overlay.classList.add('hidden');
     });
 
-    /* Card previews & clicks */
-    document.querySelectorAll('[data-src]').forEach(card => {
+    const cards = document.querySelectorAll('[data-src]');
 
-      /* full-screen on click */
-      card.addEventListener('click', () => {
+    /* ---------- Full‑screen on click ---------- */
+    cards.forEach(card=>{
+      card.addEventListener('click',()=>{
         overlayVid.src = card.dataset.src;
         overlay.classList.remove('hidden');
         overlayVid.play();
       });
+    });
 
-      /* hover preview to frame-60 (≈2 s @30 fps) */
+    /* ---------- Hover previews (desktop) ---------- */
+    cards.forEach(card=>{
       const preview = card.querySelector('video');
       preview.preload = 'metadata';
 
-      const startPreview = () => {
+      const startPreview = ()=>{
         preview.currentTime = preview.duration > 2 ? 2 : 0.1;
         preview.play();
       };
 
-      card.addEventListener('mouseenter', () => {
-        if (preview.readyState >= 2) {
+      card.addEventListener('mouseenter',()=>{
+        if(preview.readyState>=2){
           startPreview();
-        } else {
-          preview.addEventListener('loadedmetadata', startPreview, { once:true });
+        }else{
+          preview.addEventListener('loadedmetadata',startPreview,{once:true});
         }
       });
 
-      card.addEventListener('mouseleave', () => {
+      card.addEventListener('mouseleave',()=>{
         preview.pause();
-        preview.currentTime = 0;  // reset so next hover starts clean
+        preview.currentTime = 0;
       });
     });
+
+    /* ---------- Touch devices: tap to preview ---------- */
+    if(matchMedia('(pointer: coarse)').matches){
+      cards.forEach(card=>{
+        const preview = card.querySelector('video');
+        card.addEventListener('touchstart',e=>{
+          e.preventDefault(); // avoid accidental scroll
+          if(preview.paused){
+            preview.currentTime = preview.duration > 2 ? 2 : 0.1;
+            preview.play();
+            preview.style.opacity = 1;
+          }else{
+            preview.pause();
+            preview.currentTime = 0;
+            preview.style.opacity = 0;
+          }
+        },{passive:false});
+      });
+    }
   });
   </script>
 
